# MP3paraMIDI

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  Dockerfile.gpu  LICENSE  MANIFEST.in  NOTICE  README.md  SECURITY.md  docker-compose.gpu.yml  docker-compose.prod.yml  docker-compose.yml  fixes.md  midi_response.json  pyproject.toml  pytest.ini  requirements-ai.txt  requirements-dev.txt  requirements.txt  response.json  run.bat  run.sh  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build.yml  test-builds.yml
build_configs/: mp3paramidi-ai.spec  mp3paramidi.spec  version_info.txt
build_configs/hooks/: hook-librosa.py  hook-pygame.py
build_configs/linux/: AppRun  build_appimage.sh  mp3paramidi.desktop
docs/: AI_MODELS.md  ARCHITECTURE.md  BUILDING.md  FAQ.md  GITHUB_SETUP.md  RELEASE.md  SCREENSHOTS.md
src/: app.py  audio_separation.py  audio_to_midi.py  gradio_app.py  gradio_standalone.py  main.py
src/mp3paramidi/: __init__.py  __main__.py
src/mp3paramidi/audio/: __init__.py  exceptions.py  loader.py  note_filter.py  pipeline.py  pitch_detector.py  tempo_detector.py
src/mp3paramidi/gui/: __init__.py  main_window.py  playback_widget.py  settings_dialog.py  widgets.py  workers.py
src/mp3paramidi/midi/: __init__.py  (+3 more)
static/css/: styles.css
static/js/: main.js
templates/: index.html
tests/: conftest.py  helpers.py  test_advanced_features_integration.py  test_ai_pipeline.py  test_app.py  test_audio_loader.py  test_audio_separation.py  test_audio_to_midi.py  test_basic_pitch_wrapper.py  test_build_system.py  test_demucs_wrapper.py  test_gradio_app.py  test_gui.py  test_gui_integration.py  test_gui_workers.py  test_main.py  test_midi_generator.py  test_multi_track_midi.py  test_note_filter.py  test_pipeline.py  test_pitch_detector.py  test_playback.py  test_quantizer.py  test_settings_dialog.py  test_tempo_detector.py
tests/fixtures/: __init__.py  audio_generators.py
tools/: build_icons.ps1  build_icons.sh
(+5 files in other folders)
